--- a/Blockzilla/Info.plist
+++ b/Blockzilla/Info.plist
@@ -81,6 +81,10 @@
 			<string>$(PRODUCT_BUNDLE_IDENTIFIER).EraseAndOpen</string>
 		</dict>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
